Use DataFaker instead of our implementation
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>